Replace getLast() usage